Bug 1630054 - Properly free WebGPU swapchain buffers r=jgilbert

The unassigned buffers aren't associated with `wgpu-server` objects, they are just IDs allocated on the content side. So to free them, we just need to send an appropriate message.

Differential Revision: https://phabricator.services.mozilla.com/D70945